--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.2",
     "openssl": "^2.0.0",
     "sequelize": "^6.35.2",
     "sql": "^0.78.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
